// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solver (rich config) > CSS output matches golden master for rich config 1`] = `
"/* Root — color-scheme drives light-dark() */
:root {
  color-scheme: light;
  --axm-hue: 0;
  --axm-chroma: 0;
}

/* Hue/chroma properties — inheriting */
@property --axm-hue {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

@property --axm-chroma {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

/* Engine — computation layer */
/* Surface paint: oklch(lightness, tapered-chroma, hue) */
/* Taper: min(chroma, chroma × (1 - |2L - 1|)) — §5 safe bicone */
/* Text: inherits from nearest surface context */

/* Surface classes */

.surface-page {
  --axm-surface: light-dark(oklch(0.9750 calc(var(--axm-chroma) * (1 - abs(2 * 0.9750 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.2024 calc(var(--axm-chroma) * (1 - abs(2 * 0.2024 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.3072 calc(var(--axm-chroma) * (1 - abs(2 * 0.3072 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.3658 calc(var(--axm-chroma) * (1 - abs(2 * 0.3658 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.8406 calc(var(--axm-chroma) * (1 - abs(2 * 0.8406 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.4586 calc(var(--axm-chroma) * (1 - abs(2 * 0.4586 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
}

.surface-workspace {
  --axm-surface: light-dark(oklch(0.9550 calc(var(--axm-chroma) * (1 - abs(2 * 0.9550 - 1))) var(--axm-hue)), oklch(0.1500 calc(var(--axm-chroma) * (1 - abs(2 * 0.1500 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.2286 calc(var(--axm-chroma) * (1 - abs(2 * 0.2286 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.3191 calc(var(--axm-chroma) * (1 - abs(2 * 0.3191 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.4658 calc(var(--axm-chroma) * (1 - abs(2 * 0.4658 - 1))) var(--axm-hue)), oklch(0.8437 calc(var(--axm-chroma) * (1 - abs(2 * 0.8437 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5676 calc(var(--axm-chroma) * (1 - abs(2 * 0.5676 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.4221 calc(var(--axm-chroma) * (1 - abs(2 * 0.4221 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-card {
  --axm-surface: light-dark(oklch(0.9200 calc(var(--axm-chroma) * (1 - abs(2 * 0.9200 - 1))) var(--axm-hue)), oklch(0.2200 calc(var(--axm-chroma) * (1 - abs(2 * 0.2200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9716 calc(var(--axm-chroma) * (1 - abs(2 * 0.9716 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9476 calc(var(--axm-chroma) * (1 - abs(2 * 0.9476 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9234 calc(var(--axm-chroma) * (1 - abs(2 * 0.9234 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.4035 calc(var(--axm-chroma) * (1 - abs(2 * 0.4035 - 1))) var(--axm-hue)), oklch(0.8499 calc(var(--axm-chroma) * (1 - abs(2 * 0.8499 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5744 calc(var(--axm-chroma) * (1 - abs(2 * 0.5744 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3504 calc(var(--axm-chroma) * (1 - abs(2 * 0.3504 - 1))) var(--axm-hue)), oklch(0.8746 calc(var(--axm-chroma) * (1 - abs(2 * 0.8746 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-card:hover {
  --axm-surface: light-dark(oklch(0.8800 calc(var(--axm-chroma) * (1 - abs(2 * 0.8800 - 1))) var(--axm-hue)), oklch(0.3000 calc(var(--axm-chroma) * (1 - abs(2 * 0.3000 - 1))) var(--axm-hue)));
}

.surface-card:active {
  --axm-surface: light-dark(oklch(0.8200 calc(var(--axm-chroma) * (1 - abs(2 * 0.8200 - 1))) var(--axm-hue)), oklch(0.3800 calc(var(--axm-chroma) * (1 - abs(2 * 0.3800 - 1))) var(--axm-hue)));
}

.surface-input {
  --axm-surface: light-dark(oklch(0.8800 calc(var(--axm-chroma) * (1 - abs(2 * 0.8800 - 1))) var(--axm-hue)), oklch(0.3000 calc(var(--axm-chroma) * (1 - abs(2 * 0.3000 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9866 calc(var(--axm-chroma) * (1 - abs(2 * 0.9866 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9627 calc(var(--axm-chroma) * (1 - abs(2 * 0.9627 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9386 calc(var(--axm-chroma) * (1 - abs(2 * 0.9386 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3231 calc(var(--axm-chroma) * (1 - abs(2 * 0.3231 - 1))) var(--axm-hue)), oklch(0.8653 calc(var(--axm-chroma) * (1 - abs(2 * 0.8653 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5982 calc(var(--axm-chroma) * (1 - abs(2 * 0.5982 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.2414 calc(var(--axm-chroma) * (1 - abs(2 * 0.2414 - 1))) var(--axm-hue)), oklch(0.8899 calc(var(--axm-chroma) * (1 - abs(2 * 0.8899 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-action-soft {
  --axm-surface: light-dark(oklch(0.8200 calc(var(--axm-chroma) * (1 - abs(2 * 0.8200 - 1))) var(--axm-hue)), oklch(0.3800 calc(var(--axm-chroma) * (1 - abs(2 * 0.3800 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9985 calc(var(--axm-chroma) * (1 - abs(2 * 0.9985 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9985 calc(var(--axm-chroma) * (1 - abs(2 * 0.9985 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9776 calc(var(--axm-chroma) * (1 - abs(2 * 0.9776 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9082 calc(var(--axm-chroma) * (1 - abs(2 * 0.9082 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5085 calc(var(--axm-chroma) * (1 - abs(2 * 0.5085 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.6550 calc(var(--axm-chroma) * (1 - abs(2 * 0.6550 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9325 calc(var(--axm-chroma) * (1 - abs(2 * 0.9325 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-action-soft:hover {
  --axm-surface: light-dark(oklch(0.7500 calc(var(--axm-chroma) * (1 - abs(2 * 0.7500 - 1))) var(--axm-hue)), oklch(0.4800 calc(var(--axm-chroma) * (1 - abs(2 * 0.4800 - 1))) var(--axm-hue)));
}

.surface-action-soft:active {
  --axm-surface: light-dark(oklch(0.6500 calc(var(--axm-chroma) * (1 - abs(2 * 0.6500 - 1))) var(--axm-hue)), oklch(0.5800 calc(var(--axm-chroma) * (1 - abs(2 * 0.5800 - 1))) var(--axm-hue)));
}

.surface-success {
  --axm-surface: light-dark(oklch(0.9200 calc(var(--axm-chroma) * (1 - abs(2 * 0.9200 - 1))) var(--axm-hue)), oklch(0.2200 calc(var(--axm-chroma) * (1 - abs(2 * 0.2200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9836 calc(var(--axm-chroma) * (1 - abs(2 * 0.9836 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9596 calc(var(--axm-chroma) * (1 - abs(2 * 0.9596 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9355 calc(var(--axm-chroma) * (1 - abs(2 * 0.9355 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3772 calc(var(--axm-chroma) * (1 - abs(2 * 0.3772 - 1))) var(--axm-hue)), oklch(0.8622 calc(var(--axm-chroma) * (1 - abs(2 * 0.8622 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5948 calc(var(--axm-chroma) * (1 - abs(2 * 0.5948 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3231 calc(var(--axm-chroma) * (1 - abs(2 * 0.3231 - 1))) var(--axm-hue)), oklch(0.8868 calc(var(--axm-chroma) * (1 - abs(2 * 0.8868 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-warning {
  --axm-surface: light-dark(oklch(0.9200 calc(var(--axm-chroma) * (1 - abs(2 * 0.9200 - 1))) var(--axm-hue)), oklch(0.2200 calc(var(--axm-chroma) * (1 - abs(2 * 0.2200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9836 calc(var(--axm-chroma) * (1 - abs(2 * 0.9836 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9627 calc(var(--axm-chroma) * (1 - abs(2 * 0.9627 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9386 calc(var(--axm-chroma) * (1 - abs(2 * 0.9386 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3734 calc(var(--axm-chroma) * (1 - abs(2 * 0.3734 - 1))) var(--axm-hue)), oklch(0.8653 calc(var(--axm-chroma) * (1 - abs(2 * 0.8653 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5982 calc(var(--axm-chroma) * (1 - abs(2 * 0.5982 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3191 calc(var(--axm-chroma) * (1 - abs(2 * 0.3191 - 1))) var(--axm-hue)), oklch(0.8899 calc(var(--axm-chroma) * (1 - abs(2 * 0.8899 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-error {
  --axm-surface: light-dark(oklch(0.9200 calc(var(--axm-chroma) * (1 - abs(2 * 0.9200 - 1))) var(--axm-hue)), oklch(0.2200 calc(var(--axm-chroma) * (1 - abs(2 * 0.2200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9866 calc(var(--axm-chroma) * (1 - abs(2 * 0.9866 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9627 calc(var(--axm-chroma) * (1 - abs(2 * 0.9627 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3696 calc(var(--axm-chroma) * (1 - abs(2 * 0.3696 - 1))) var(--axm-hue)), oklch(0.8653 calc(var(--axm-chroma) * (1 - abs(2 * 0.8653 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.6016 calc(var(--axm-chroma) * (1 - abs(2 * 0.6016 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3112 calc(var(--axm-chroma) * (1 - abs(2 * 0.3112 - 1))) var(--axm-hue)), oklch(0.8930 calc(var(--axm-chroma) * (1 - abs(2 * 0.8930 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-spotlight {
  --axm-surface: light-dark(oklch(0.9000 calc(var(--axm-chroma) * (1 - abs(2 * 0.9000 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3696 calc(var(--axm-chroma) * (1 - abs(2 * 0.3696 - 1))) var(--axm-hue)), oklch(0.8406 calc(var(--axm-chroma) * (1 - abs(2 * 0.8406 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3112 calc(var(--axm-chroma) * (1 - abs(2 * 0.3112 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  color-scheme: dark;
}

/* Text utilities — consume nearest surface context */
.text-high { color: var(--axm-text-high); }
.text-strong { color: var(--axm-text-strong); }
.text-subtle { color: var(--axm-text-subtle); }
.text-subtlest { color: var(--axm-text-subtlest); }
.text-link { color: var(--axm-text-link, var(--axm-text-strong)); text-decoration: underline; }
.text-disabled { color: var(--axm-text-disabled, var(--axm-text-subtlest)); }

/* Border utilities — consume nearest surface context */
.border-decorative { border-color: var(--axm-border-decorative); }
.border-interactive { border-color: var(--axm-border-interactive); }
.border-critical { border-color: var(--axm-border-critical); }

/* High contrast — re-solved with tighter targets/scale */
@media (prefers-contrast: more), (prefers-contrast: custom) {
  .surface-page {
    --axm-surface: light-dark(oklch(0.9900 calc(var(--axm-chroma) * (1 - abs(2 * 0.9900 - 1))) var(--axm-hue)), oklch(0.0400 calc(var(--axm-chroma) * (1 - abs(2 * 0.0400 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.2748 calc(var(--axm-chroma) * (1 - abs(2 * 0.2748 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.2748 calc(var(--axm-chroma) * (1 - abs(2 * 0.2748 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.3426 calc(var(--axm-chroma) * (1 - abs(2 * 0.3426 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3961 calc(var(--axm-chroma) * (1 - abs(2 * 0.3961 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4837 calc(var(--axm-chroma) * (1 - abs(2 * 0.4837 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-workspace {
    --axm-surface: light-dark(oklch(0.9820 calc(var(--axm-chroma) * (1 - abs(2 * 0.9820 - 1))) var(--axm-hue)), oklch(0.0600 calc(var(--axm-chroma) * (1 - abs(2 * 0.0600 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.2372 calc(var(--axm-chroma) * (1 - abs(2 * 0.2372 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.2372 calc(var(--axm-chroma) * (1 - abs(2 * 0.2372 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.3231 calc(var(--axm-chroma) * (1 - abs(2 * 0.3231 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3772 calc(var(--axm-chroma) * (1 - abs(2 * 0.3772 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4694 calc(var(--axm-chroma) * (1 - abs(2 * 0.4694 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-card {
    --axm-surface: light-dark(oklch(0.9680 calc(var(--axm-chroma) * (1 - abs(2 * 0.9680 - 1))) var(--axm-hue)), oklch(0.0880 calc(var(--axm-chroma) * (1 - abs(2 * 0.0880 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2789 calc(var(--axm-chroma) * (1 - abs(2 * 0.2789 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3465 calc(var(--axm-chroma) * (1 - abs(2 * 0.3465 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4441 calc(var(--axm-chroma) * (1 - abs(2 * 0.4441 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-input {
    --axm-surface: light-dark(oklch(0.9520 calc(var(--axm-chroma) * (1 - abs(2 * 0.9520 - 1))) var(--axm-hue)), oklch(0.1200 calc(var(--axm-chroma) * (1 - abs(2 * 0.1200 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2112 calc(var(--axm-chroma) * (1 - abs(2 * 0.2112 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3112 calc(var(--axm-chroma) * (1 - abs(2 * 0.3112 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4184 calc(var(--axm-chroma) * (1 - abs(2 * 0.4184 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-action-soft {
    --axm-surface: light-dark(oklch(0.9280 calc(var(--axm-chroma) * (1 - abs(2 * 0.9280 - 1))) var(--axm-hue)), oklch(0.1520 calc(var(--axm-chroma) * (1 - abs(2 * 0.1520 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9776 calc(var(--axm-chroma) * (1 - abs(2 * 0.9776 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9776 calc(var(--axm-chroma) * (1 - abs(2 * 0.9776 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9536 calc(var(--axm-chroma) * (1 - abs(2 * 0.9536 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9295 calc(var(--axm-chroma) * (1 - abs(2 * 0.9295 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5846 calc(var(--axm-chroma) * (1 - abs(2 * 0.5846 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.3426 calc(var(--axm-chroma) * (1 - abs(2 * 0.3426 - 1))) var(--axm-hue)), oklch(0.8807 calc(var(--axm-chroma) * (1 - abs(2 * 0.8807 - 1))) var(--axm-hue)));
  }
  .surface-success {
    --axm-surface: light-dark(oklch(0.9680 calc(var(--axm-chroma) * (1 - abs(2 * 0.9680 - 1))) var(--axm-hue)), oklch(0.0880 calc(var(--axm-chroma) * (1 - abs(2 * 0.0880 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9766 calc(var(--axm-chroma) * (1 - abs(2 * 0.9766 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9766 calc(var(--axm-chroma) * (1 - abs(2 * 0.9766 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2200 calc(var(--axm-chroma) * (1 - abs(2 * 0.2200 - 1))) var(--axm-hue)), oklch(0.9536 calc(var(--axm-chroma) * (1 - abs(2 * 0.9536 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3152 calc(var(--axm-chroma) * (1 - abs(2 * 0.3152 - 1))) var(--axm-hue)), oklch(0.9295 calc(var(--axm-chroma) * (1 - abs(2 * 0.9295 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5846 calc(var(--axm-chroma) * (1 - abs(2 * 0.5846 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4184 calc(var(--axm-chroma) * (1 - abs(2 * 0.4184 - 1))) var(--axm-hue)), oklch(0.8807 calc(var(--axm-chroma) * (1 - abs(2 * 0.8807 - 1))) var(--axm-hue)));
  }
  .surface-warning {
    --axm-surface: light-dark(oklch(0.9680 calc(var(--axm-chroma) * (1 - abs(2 * 0.9680 - 1))) var(--axm-hue)), oklch(0.0880 calc(var(--axm-chroma) * (1 - abs(2 * 0.0880 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9776 calc(var(--axm-chroma) * (1 - abs(2 * 0.9776 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9776 calc(var(--axm-chroma) * (1 - abs(2 * 0.9776 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2109 calc(var(--axm-chroma) * (1 - abs(2 * 0.2109 - 1))) var(--axm-hue)), oklch(0.9536 calc(var(--axm-chroma) * (1 - abs(2 * 0.9536 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3086 calc(var(--axm-chroma) * (1 - abs(2 * 0.3086 - 1))) var(--axm-hue)), oklch(0.9325 calc(var(--axm-chroma) * (1 - abs(2 * 0.9325 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5880 calc(var(--axm-chroma) * (1 - abs(2 * 0.5880 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4147 calc(var(--axm-chroma) * (1 - abs(2 * 0.4147 - 1))) var(--axm-hue)), oklch(0.8838 calc(var(--axm-chroma) * (1 - abs(2 * 0.8838 - 1))) var(--axm-hue)));
  }
  .surface-error {
    --axm-surface: light-dark(oklch(0.9680 calc(var(--axm-chroma) * (1 - abs(2 * 0.9680 - 1))) var(--axm-hue)), oklch(0.0880 calc(var(--axm-chroma) * (1 - abs(2 * 0.0880 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9806 calc(var(--axm-chroma) * (1 - abs(2 * 0.9806 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9806 calc(var(--axm-chroma) * (1 - abs(2 * 0.9806 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.1935 calc(var(--axm-chroma) * (1 - abs(2 * 0.1935 - 1))) var(--axm-hue)), oklch(0.9566 calc(var(--axm-chroma) * (1 - abs(2 * 0.9566 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3032 calc(var(--axm-chroma) * (1 - abs(2 * 0.3032 - 1))) var(--axm-hue)), oklch(0.9325 calc(var(--axm-chroma) * (1 - abs(2 * 0.9325 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5914 calc(var(--axm-chroma) * (1 - abs(2 * 0.5914 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4110 calc(var(--axm-chroma) * (1 - abs(2 * 0.4110 - 1))) var(--axm-hue)), oklch(0.8838 calc(var(--axm-chroma) * (1 - abs(2 * 0.8838 - 1))) var(--axm-hue)));
  }
  .surface-spotlight {
    --axm-surface: light-dark(oklch(0.9600 calc(var(--axm-chroma) * (1 - abs(2 * 0.9600 - 1))) var(--axm-hue)), oklch(0.0400 calc(var(--axm-chroma) * (1 - abs(2 * 0.0400 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2541 calc(var(--axm-chroma) * (1 - abs(2 * 0.2541 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3309 calc(var(--axm-chroma) * (1 - abs(2 * 0.3309 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4331 calc(var(--axm-chroma) * (1 - abs(2 * 0.4331 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
}

/* Forced colors — cede to OS palette per surface role */
@media (forced-colors: active) {
  .surface-page {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-workspace {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-card {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-input {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-action-soft {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-success {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-high: Mark;
    --axm-text-strong: Mark;
    --axm-text-subtle: Mark;
    --axm-text-subtlest: Mark;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-warning {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-high: Mark;
    --axm-text-strong: Mark;
    --axm-text-subtle: Mark;
    --axm-text-subtlest: Mark;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-error {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-high: Mark;
    --axm-text-strong: Mark;
    --axm-text-subtle: Mark;
    --axm-text-subtlest: Mark;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-spotlight {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
}"
`;

exports[`solver > CSS output matches golden master 1`] = `
"/* Root — color-scheme drives light-dark() */
:root {
  color-scheme: light;
  --axm-hue: 0;
  --axm-chroma: 0;
}

/* Hue/chroma properties — inheriting */
@property --axm-hue {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

@property --axm-chroma {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

/* Engine — computation layer */
/* Surface paint: oklch(lightness, tapered-chroma, hue) */
/* Taper: min(chroma, chroma × (1 - |2L - 1|)) — §5 safe bicone */
/* Text: inherits from nearest surface context */

/* Surface classes */

.surface-page {
  --axm-surface: light-dark(oklch(0.9750 calc(var(--axm-chroma) * (1 - abs(2 * 0.9750 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.2024 calc(var(--axm-chroma) * (1 - abs(2 * 0.2024 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.3072 calc(var(--axm-chroma) * (1 - abs(2 * 0.3072 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.3658 calc(var(--axm-chroma) * (1 - abs(2 * 0.3658 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.8406 calc(var(--axm-chroma) * (1 - abs(2 * 0.8406 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.4586 calc(var(--axm-chroma) * (1 - abs(2 * 0.4586 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
}

.surface-workspace {
  --axm-surface: light-dark(oklch(0.9550 calc(var(--axm-chroma) * (1 - abs(2 * 0.9550 - 1))) var(--axm-hue)), oklch(0.1800 calc(var(--axm-chroma) * (1 - abs(2 * 0.1800 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.2286 calc(var(--axm-chroma) * (1 - abs(2 * 0.2286 - 1))) var(--axm-hue)), oklch(0.9446 calc(var(--axm-chroma) * (1 - abs(2 * 0.9446 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.3191 calc(var(--axm-chroma) * (1 - abs(2 * 0.3191 - 1))) var(--axm-hue)), oklch(0.9204 calc(var(--axm-chroma) * (1 - abs(2 * 0.9204 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.4658 calc(var(--axm-chroma) * (1 - abs(2 * 0.4658 - 1))) var(--axm-hue)), oklch(0.8437 calc(var(--axm-chroma) * (1 - abs(2 * 0.8437 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5710 calc(var(--axm-chroma) * (1 - abs(2 * 0.5710 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.4221 calc(var(--axm-chroma) * (1 - abs(2 * 0.4221 - 1))) var(--axm-hue)), oklch(0.8715 calc(var(--axm-chroma) * (1 - abs(2 * 0.8715 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-card {
  --axm-surface: light-dark(oklch(0.9000 calc(var(--axm-chroma) * (1 - abs(2 * 0.9000 - 1))) var(--axm-hue)), oklch(0.2500 calc(var(--axm-chroma) * (1 - abs(2 * 0.2500 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9746 calc(var(--axm-chroma) * (1 - abs(2 * 0.9746 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9536 calc(var(--axm-chroma) * (1 - abs(2 * 0.9536 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9295 calc(var(--axm-chroma) * (1 - abs(2 * 0.9295 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3696 calc(var(--axm-chroma) * (1 - abs(2 * 0.3696 - 1))) var(--axm-hue)), oklch(0.8530 calc(var(--axm-chroma) * (1 - abs(2 * 0.8530 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5846 calc(var(--axm-chroma) * (1 - abs(2 * 0.5846 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3112 calc(var(--axm-chroma) * (1 - abs(2 * 0.3112 - 1))) var(--axm-hue)), oklch(0.8807 calc(var(--axm-chroma) * (1 - abs(2 * 0.8807 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-card:hover {
  --axm-surface: light-dark(oklch(0.8500 calc(var(--axm-chroma) * (1 - abs(2 * 0.8500 - 1))) var(--axm-hue)), oklch(0.3200 calc(var(--axm-chroma) * (1 - abs(2 * 0.3200 - 1))) var(--axm-hue)));
}

.surface-card:active {
  --axm-surface: light-dark(oklch(0.7800 calc(var(--axm-chroma) * (1 - abs(2 * 0.7800 - 1))) var(--axm-hue)), oklch(0.4000 calc(var(--axm-chroma) * (1 - abs(2 * 0.4000 - 1))) var(--axm-hue)));
}

.surface-action {
  --axm-surface: light-dark(oklch(0.9000 calc(var(--axm-chroma) * (1 - abs(2 * 0.9000 - 1))) var(--axm-hue)), oklch(0.2500 calc(var(--axm-chroma) * (1 - abs(2 * 0.2500 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9896 calc(var(--axm-chroma) * (1 - abs(2 * 0.9896 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9687 calc(var(--axm-chroma) * (1 - abs(2 * 0.9687 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9446 calc(var(--axm-chroma) * (1 - abs(2 * 0.9446 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3309 calc(var(--axm-chroma) * (1 - abs(2 * 0.3309 - 1))) var(--axm-hue)), oklch(0.8715 calc(var(--axm-chroma) * (1 - abs(2 * 0.8715 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.6083 calc(var(--axm-chroma) * (1 - abs(2 * 0.6083 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.2541 calc(var(--axm-chroma) * (1 - abs(2 * 0.2541 - 1))) var(--axm-hue)), oklch(0.8960 calc(var(--axm-chroma) * (1 - abs(2 * 0.8960 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
}

.surface-action:hover {
  --axm-surface: light-dark(oklch(0.8500 calc(var(--axm-chroma) * (1 - abs(2 * 0.8500 - 1))) var(--axm-hue)), oklch(0.3200 calc(var(--axm-chroma) * (1 - abs(2 * 0.3200 - 1))) var(--axm-hue)));
}

.surface-action:active {
  --axm-surface: light-dark(oklch(0.7800 calc(var(--axm-chroma) * (1 - abs(2 * 0.7800 - 1))) var(--axm-hue)), oklch(0.4000 calc(var(--axm-chroma) * (1 - abs(2 * 0.4000 - 1))) var(--axm-hue)));
}

.surface-spotlight {
  --axm-surface: light-dark(oklch(0.9000 calc(var(--axm-chroma) * (1 - abs(2 * 0.9000 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3696 calc(var(--axm-chroma) * (1 - abs(2 * 0.3696 - 1))) var(--axm-hue)), oklch(0.8406 calc(var(--axm-chroma) * (1 - abs(2 * 0.8406 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.3112 calc(var(--axm-chroma) * (1 - abs(2 * 0.3112 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  color-scheme: dark;
}

.surface-spotlight-card {
  --axm-surface: light-dark(oklch(0.8800 calc(var(--axm-chroma) * (1 - abs(2 * 0.8800 - 1))) var(--axm-hue)), oklch(0.1200 calc(var(--axm-chroma) * (1 - abs(2 * 0.1200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.3231 calc(var(--axm-chroma) * (1 - abs(2 * 0.3231 - 1))) var(--axm-hue)), oklch(0.8406 calc(var(--axm-chroma) * (1 - abs(2 * 0.8406 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.2414 calc(var(--axm-chroma) * (1 - abs(2 * 0.2414 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
  color-scheme: dark;
}

.surface-spotlight-action {
  --axm-surface: light-dark(oklch(0.8800 calc(var(--axm-chroma) * (1 - abs(2 * 0.8800 - 1))) var(--axm-hue)), oklch(0.1200 calc(var(--axm-chroma) * (1 - abs(2 * 0.1200 - 1))) var(--axm-hue)));
  --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9806 calc(var(--axm-chroma) * (1 - abs(2 * 0.9806 - 1))) var(--axm-hue)));
  --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9566 calc(var(--axm-chroma) * (1 - abs(2 * 0.9566 - 1))) var(--axm-hue)));
  --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9325 calc(var(--axm-chroma) * (1 - abs(2 * 0.9325 - 1))) var(--axm-hue)));
  --axm-text-subtlest: light-dark(oklch(0.2748 calc(var(--axm-chroma) * (1 - abs(2 * 0.2748 - 1))) var(--axm-hue)), oklch(0.8591 calc(var(--axm-chroma) * (1 - abs(2 * 0.8591 - 1))) var(--axm-hue)));
  --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
  --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5914 calc(var(--axm-chroma) * (1 - abs(2 * 0.5914 - 1))) var(--axm-hue)));
  --axm-border-critical: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.8838 calc(var(--axm-chroma) * (1 - abs(2 * 0.8838 - 1))) var(--axm-hue)));
  background: var(--axm-surface);
  transition: background 0.3s ease;
  box-shadow: inset 0 0 0 1px var(--axm-border-decorative, currentColor);
  color-scheme: dark;
}

/* Text utilities — consume nearest surface context */
.text-high { color: var(--axm-text-high); }
.text-strong { color: var(--axm-text-strong); }
.text-subtle { color: var(--axm-text-subtle); }
.text-subtlest { color: var(--axm-text-subtlest); }
.text-link { color: var(--axm-text-link, var(--axm-text-strong)); text-decoration: underline; }
.text-disabled { color: var(--axm-text-disabled, var(--axm-text-subtlest)); }

/* Border utilities — consume nearest surface context */
.border-decorative { border-color: var(--axm-border-decorative); }
.border-interactive { border-color: var(--axm-border-interactive); }
.border-critical { border-color: var(--axm-border-critical); }

/* High contrast — re-solved with tighter targets/scale */
@media (prefers-contrast: more), (prefers-contrast: custom) {
  .surface-page {
    --axm-surface: light-dark(oklch(0.9900 calc(var(--axm-chroma) * (1 - abs(2 * 0.9900 - 1))) var(--axm-hue)), oklch(0.0400 calc(var(--axm-chroma) * (1 - abs(2 * 0.0400 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.2748 calc(var(--axm-chroma) * (1 - abs(2 * 0.2748 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.2748 calc(var(--axm-chroma) * (1 - abs(2 * 0.2748 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.3426 calc(var(--axm-chroma) * (1 - abs(2 * 0.3426 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3961 calc(var(--axm-chroma) * (1 - abs(2 * 0.3961 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4837 calc(var(--axm-chroma) * (1 - abs(2 * 0.4837 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-workspace {
    --axm-surface: light-dark(oklch(0.9820 calc(var(--axm-chroma) * (1 - abs(2 * 0.9820 - 1))) var(--axm-hue)), oklch(0.0720 calc(var(--axm-chroma) * (1 - abs(2 * 0.0720 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.2372 calc(var(--axm-chroma) * (1 - abs(2 * 0.2372 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.2372 calc(var(--axm-chroma) * (1 - abs(2 * 0.2372 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.3231 calc(var(--axm-chroma) * (1 - abs(2 * 0.3231 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3772 calc(var(--axm-chroma) * (1 - abs(2 * 0.3772 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4694 calc(var(--axm-chroma) * (1 - abs(2 * 0.4694 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-card {
    --axm-surface: light-dark(oklch(0.9600 calc(var(--axm-chroma) * (1 - abs(2 * 0.9600 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9657 calc(var(--axm-chroma) * (1 - abs(2 * 0.9657 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.2541 calc(var(--axm-chroma) * (1 - abs(2 * 0.2541 - 1))) var(--axm-hue)), oklch(0.9416 calc(var(--axm-chroma) * (1 - abs(2 * 0.9416 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.3309 calc(var(--axm-chroma) * (1 - abs(2 * 0.3309 - 1))) var(--axm-hue)), oklch(0.9174 calc(var(--axm-chroma) * (1 - abs(2 * 0.9174 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5641 calc(var(--axm-chroma) * (1 - abs(2 * 0.5641 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.4331 calc(var(--axm-chroma) * (1 - abs(2 * 0.4331 - 1))) var(--axm-hue)), oklch(0.8684 calc(var(--axm-chroma) * (1 - abs(2 * 0.8684 - 1))) var(--axm-hue)));
  }
  .surface-action {
    --axm-surface: light-dark(oklch(0.9600 calc(var(--axm-chroma) * (1 - abs(2 * 0.9600 - 1))) var(--axm-hue)), oklch(0.1000 calc(var(--axm-chroma) * (1 - abs(2 * 0.1000 - 1))) var(--axm-hue)));
    --axm-text-high: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9806 calc(var(--axm-chroma) * (1 - abs(2 * 0.9806 - 1))) var(--axm-hue)));
    --axm-text-strong: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9806 calc(var(--axm-chroma) * (1 - abs(2 * 0.9806 - 1))) var(--axm-hue)));
    --axm-text-subtle: light-dark(oklch(0.1661 calc(var(--axm-chroma) * (1 - abs(2 * 0.1661 - 1))) var(--axm-hue)), oklch(0.9566 calc(var(--axm-chroma) * (1 - abs(2 * 0.9566 - 1))) var(--axm-hue)));
    --axm-text-subtlest: light-dark(oklch(0.2830 calc(var(--axm-chroma) * (1 - abs(2 * 0.2830 - 1))) var(--axm-hue)), oklch(0.9325 calc(var(--axm-chroma) * (1 - abs(2 * 0.9325 - 1))) var(--axm-hue)));
    --axm-border-decorative: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)));
    --axm-border-interactive: light-dark(oklch(0.5000 calc(var(--axm-chroma) * (1 - abs(2 * 0.5000 - 1))) var(--axm-hue)), oklch(0.5914 calc(var(--axm-chroma) * (1 - abs(2 * 0.5914 - 1))) var(--axm-hue)));
    --axm-border-critical: light-dark(oklch(0.3998 calc(var(--axm-chroma) * (1 - abs(2 * 0.3998 - 1))) var(--axm-hue)), oklch(0.8838 calc(var(--axm-chroma) * (1 - abs(2 * 0.8838 - 1))) var(--axm-hue)));
  }
}

/* Forced colors — cede to OS palette per surface role */
@media (forced-colors: active) {
  .surface-page {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-workspace {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-card {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-action {
    --axm-surface: ButtonFace;
    --axm-text-high: ButtonText;
    --axm-text-strong: ButtonText;
    --axm-text-subtle: ButtonText;
    --axm-text-subtlest: ButtonText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: ButtonBorder;
    --axm-border-critical: CanvasText;
  }
  .surface-spotlight {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-spotlight-card {
    --axm-surface: Canvas;
    --axm-text-high: CanvasText;
    --axm-text-strong: CanvasText;
    --axm-text-subtle: CanvasText;
    --axm-text-subtlest: CanvasText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: CanvasText;
    --axm-border-critical: CanvasText;
  }
  .surface-spotlight-action {
    --axm-surface: ButtonFace;
    --axm-text-high: ButtonText;
    --axm-text-strong: ButtonText;
    --axm-text-subtle: ButtonText;
    --axm-text-subtlest: ButtonText;
    --axm-text-link: LinkText;
    --axm-text-disabled: GrayText;
    --axm-border-decorative: CanvasText;
    --axm-border-interactive: ButtonBorder;
    --axm-border-critical: CanvasText;
  }
}"
`;
